# api/swagger/docs/swagger.json
@@ -58,7 +58,7 @@
         },
         "/api/v1/users": {
             "post": {
-                "description": "Register a new user with username, nickname, avatar, email and password",
+                "description": "Create a user with username, nickname, avatar, email and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -68,7 +68,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Register a new user",
+                "summary": "Create user",
                 "parameters": [
                     {
                         "description": "User information",
@@ -76,13 +76,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.RegisterRequest"
+                            "$ref": "#/definitions/v1.CreateUserRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "User registered successfully",
+                        "description": "User created successfully",
                         "schema": {
                             "$ref": "#/definitions/core.SuccessResponse"
                         }
@@ -302,33 +302,7 @@
                 }
             }
         },
-        "v1.LoginRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "description": "Password is the user's password",
-                    "type": "string"
-                },
-                "username": {
-                    "description": "Username is the user's username",
-                    "type": "string"
-                }
-            }
-        },
-        "v1.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "description": "Token is the JWT token for authentication",
-                    "type": "string"
-                }
-            }
-        },
-        "v1.RegisterRequest": {
+        "v1.CreateUserRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -363,6 +337,32 @@
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 3
+                }
+            }
+        },
+        "v1.LoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "description": "Password is the user's password",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "Username is the user's username",
+                    "type": "string"
+                }
+            }
+        },
+        "v1.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "description": "Token is the JWT token for authentication",
+                    "type": "string"
                 }
             }
         },
